--- a/Presentation/Views/TeamMain.xaml
+++ b/Presentation/Views/TeamMain.xaml
@@ -1,5 +1,5 @@
 ﻿<vncmvvm:ViewBase
-    x:Class="AZDORestApiExplorer.Presentation.Views.ProjectMain"
+    x:Class="AZDORestApiExplorer.Presentation.Views.TeamMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:prism="http://www.codeplex.com/prism"
@@ -16,7 +16,7 @@
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
 >
-
+    
     <UserControl.Resources>
         <Style x:Key="OutlineBorder" TargetType="Border">
             <Setter Property="BorderBrush" Value="Black" />
@@ -107,48 +107,55 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        
-        <Border  Style="{StaticResource CountBorder}" Grid.Row="0">
+
+        <Border Style="{StaticResource CountBorder}" Grid.Row="0">
             <StackPanel Style="{StaticResource CountStackPanel}" Margin="2">
                 <Label Content="Count:" />
-                <TextBlock Text="{Binding Projects.Count}"
-                                   Style="{StaticResource CountTextBlock}"/>
+                <TextBlock Text="{Binding Teams.Count}"
+                                Style="{StaticResource CountTextBlock}"/>
             </StackPanel>
         </Border>
 
-        <DataGrid 
-            Grid.Row="1"
-            ItemsSource="{Binding Projects.ResultItems}"
-            SelectedItem="{Binding Projects.SelectedItem}"               
-            AutoGenerateColumns="True" 
-            CanUserAddRows="False"
-            FontSize="12"
-            ScrollViewer.CanContentScroll="True"
-            ScrollViewer.HorizontalScrollBarVisibility="Auto"
-            ScrollViewer.VerticalScrollBarVisibility="Auto">
+        <DataGrid Grid.Row="1"
+                ItemsSource="{Binding Teams.ResultItems}"
+                SelectedItem="{Binding Teams.SelectedItem}"               
+                AutoGenerateColumns="True"
+                CanUserAddRows="False"
+                FontSize="12"
+                ScrollViewer.CanContentScroll="True"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ScrollViewer.VerticalScrollBarVisibility="Auto">
+            <!--<DataGrid.Columns>
+                            <DataGridTemplateColumn Header="Key">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding Key}" />
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+
+                            <DataGridTemplateColumn Header="Value">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <ItemsControl ItemsSource="{Binding Value}">
+                                            <ItemsControl.ItemTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock Text="{Binding}" Margin="0,0,5,0" />
+                                                </DataTemplate>
+                                            </ItemsControl.ItemTemplate>
+                                            <ItemsControl.ItemsPanel>
+                                                <ItemsPanelTemplate>
+                                                    <StackPanel Orientation="Vertical" />
+                                                </ItemsPanelTemplate>
+                                            </ItemsControl.ItemsPanel>
+                                        </ItemsControl>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                        </DataGrid.Columns>-->
         </DataGrid>
 
-        <Grid Grid.Row="2">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-
-            <ContentControl Grid.Column="0" FontSize="12"
-                                Content="{Binding Projects.SelectedItem}"
-                                ContentTemplate="{StaticResource ProjectTemplateStackPanel}"/>
-
-            <ContentControl Grid.Column="1"  FontSize="12"
-                                Content="{Binding Projects.SelectedItem}"
-                                ContentTemplate="{StaticResource ProjectTemplateGrid}"/>
-
-        </Grid>
-
     </Grid>
-
+    
 </vncmvvm:ViewBase>
