--- a/Presentation/Views/WorkItemTypeMain.xaml
+++ b/Presentation/Views/WorkItemTypeMain.xaml
@@ -1,5 +1,5 @@
 ﻿<vncmvvm:ViewBase
-    x:Class="AZDORestApiExplorer.Presentation.Views.ProjectMain"
+    x:Class="AZDORestApiExplorer.Presentation.Views.WorkItemTypeMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:prism="http://www.codeplex.com/prism"
@@ -102,7 +102,7 @@
             </Grid>
         </DataTemplate>
     </UserControl.Resources>
-    
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -110,45 +110,27 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         
-        <Border  Style="{StaticResource CountBorder}" Grid.Row="0">
+        <Border Style="{StaticResource CountBorder}" Grid.Row="0">
             <StackPanel Style="{StaticResource CountStackPanel}" Margin="2">
                 <Label Content="Count:" />
-                <TextBlock Text="{Binding Projects.Count}"
+                <TextBlock Text="{Binding WorkItemTypes.Count}"
                                    Style="{StaticResource CountTextBlock}"/>
             </StackPanel>
         </Border>
 
-        <DataGrid 
-            Grid.Row="1"
-            ItemsSource="{Binding Projects.ResultItems}"
-            SelectedItem="{Binding Projects.SelectedItem}"               
-            AutoGenerateColumns="True" 
-            CanUserAddRows="False"
-            FontSize="12"
-            ScrollViewer.CanContentScroll="True"
-            ScrollViewer.HorizontalScrollBarVisibility="Auto"
-            ScrollViewer.VerticalScrollBarVisibility="Auto">
+        <DataGrid Grid.Row="1"
+                    ItemsSource="{Binding WorkItemTypes.ResultItems}"
+                    SelectedItem="{Binding WorkItemTypes.SelectedItem}"               
+                    AutoGenerateColumns="True"
+                    CanUserAddRows="False"
+                    MaxHeight="500" FontSize="12"
+                    ScrollViewer.CanContentScroll="True"
+                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto">
         </DataGrid>
 
-        <Grid Grid.Row="2">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-
-            <ContentControl Grid.Column="0" FontSize="12"
-                                Content="{Binding Projects.SelectedItem}"
-                                ContentTemplate="{StaticResource ProjectTemplateStackPanel}"/>
-
-            <ContentControl Grid.Column="1"  FontSize="12"
-                                Content="{Binding Projects.SelectedItem}"
-                                ContentTemplate="{StaticResource ProjectTemplateGrid}"/>
-
-        </Grid>
+        <TextBlock Text="{Binding WorkItems.SelectedItem}" />
 
     </Grid>
-
+    
 </vncmvvm:ViewBase>
