--- a/Resources/Xaml/Display_StylesAndTemplates.xaml
+++ b/Resources/Xaml/Display_StylesAndTemplates.xaml
@@ -20,6 +20,28 @@
     <SolidColorBrush x:Key="FriendMeetingDetailBackground" Color="#F0C040" />
     <SolidColorBrush x:Key="FriendDetailBackground" Color="#F0E040" />
 
+    <Style x:Key="OutlineBorder" TargetType="Border">
+        <Setter Property="BorderBrush" Value="Black" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="CornerRadius" Value="5" />
+    </Style>
+    <Style x:Key="CountBorder" TargetType="Border">
+        <Setter Property="BorderBrush" Value="Black" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="CornerRadius" Value="5" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+    </Style>
+    <Style x:Key="CountTextBlock" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="Black" />
+        <!--<Setter Property="FontSize" Value="18" />-->
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Margin" Value="0,0,5,0" />
+    </Style>
+    <Style x:Key="CountStackPanel" TargetType="StackPanel">
+        <Setter Property="Orientation" Value="Horizontal" />
+        <Setter Property="Margin" Value="-3,-5,-2,-3" />
+    </Style>
+    
     <Style TargetType="TextBox">
         <Setter Property="Validation.ErrorTemplate"> 
             <Setter.Value>
